--- a/src/templates/blogify/_layout.twig
+++ b/src/templates/blogify/_layout.twig
@@ -21,7 +21,7 @@
         </div>
         <div class="site-mobile-menu-body"></div>
     </div>
-    <header class="site-navbar" role="banner">
+    <header class="site-navbar test" role="banner">
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-12 search-form-wrap js-search-form" style="margin-top:75px;">
