--- a/src/assets/site/css/style.css
+++ b/src/assets/site/css/style.css
@@ -4,7 +4,7 @@ body {
   color: gray;
   font-weight: 300;
   font-size: 1rem;
-  background: #fff;
+  background: #000;
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
 ::-moz-selection {
